# robotdegilim.xyz

./: .editorconfig  .gitignore  README.md  nte_pipeline_single.py  nte_scrape.py  requirements-dev.txt  robotdegilim.xyz  run_server.sh
backend/: .env.example  .gitignore  Makefile  README.md  check_nte_result.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_nte.py
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/context/: schema.py  service.py
backend/app/core/: constants.py  errors.py  logging.py  paths.py  settings.py
backend/app/musts/: parse.py
backend/app/nte/: fetch.py  io.py
backend/app/pipelines/: musts.py  nte_available.py  scrape.py
backend/app/scrape/: fetch.py  io.py  parse.py
backend/app/services/: admin_auth.py  admin_handler.py  request_handler.py  settings_admin.py  status_service.py
backend/app/storage/: s3.py
backend/app/utils/: cache.py  http.py
backend/data/raw/: departmentsOverrides.json
backend/docs/: environment.md
backend/scripts/: make_fly_deploy.py  speed.py
backend/scripts/admin/: __init__.py  actions.py  actions_context.py  actions_lock.py  actions_settings.py  client.py  config.py  main.py  token_store.py
backend/src/: app.py  app_constants.py  config.py  debug_helper.py  errors.py
backend/src/musts/: fetch.py  io.py  musts.py  parse.py
backend/src/nte/: __init__.py  io.py  (+5 more)
backend/tests/: conftest.py  test_admin_handler.py  test_admin_routes.py  test_api_schemas.py  test_app_speed.py  test_cache_utils.py  test_context_service.py  test_core_errors_logging.py  test_core_settings.py  test_errors.py  test_http_utils.py  test_musts.py  test_nte_available.py  test_nte_list.py  test_nte_parse.py  test_pipelines.py  test_request_handler.py  test_robots.py  test_s3_storage.py  test_settings_admin.py  test_status_service.py  test_storage_local.py
(+185 files in other folders)
