[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotdegilim-backend"
version = "0.1.0"
requires-python = ">=3.12"
# Optionally move runtime deps here later:
# dependencies = ["requests", "beautifulsoup4"]

[tool.setuptools]
# Tell setuptools that our sources live under src/
package-dir = {"" = "src"}
# If you want to ship non-.py data inside packages, add package-data here later.

[tool.setuptools.packages.find]
# Find packages under src/
where = ["src"]
include = ["musts*", "scrape*", "utils*", "services*"]

# Also install top-level single-file modules under src/
# (so `import app`, `import config`, etc. will work)
py-modules = ["app", "config", "errors"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
